push before column and grid changes for mobile

--- a/government.html
+++ b/government.html
@@ -134,8 +134,8 @@
 
       
       <!-- GOVERNMENT DIRECTORY GRID -->
-      <div class="government-cards-grid"id="government-directory">
-
+      <div class="fixed-three-column-grid"id="government-directory">
+     <div class="fixed-three-column-grid">
         <div class="gov-card">
           <img src="images/bank-4859142_640.png" alt="Card 1">
           <h4>Lorem Ipsum Card 1</h4>
@@ -172,7 +172,7 @@
           <img src="images/bank-4859142_640.png" alt="Card 9">
           <h4>Lorem Ipsum Card 9</h4>
       </div>
-
+</div>
     </div>
   </div> 
 </main>
