--- a/residents.html
+++ b/residents.html
@@ -43,16 +43,16 @@
     <aside class="sidebar">
       <h4>Resident Services</h4>
       <ul>
-        <li><a href="#">Public Records</a></li>
-        <li><a href="#">Building Permits</a></li>
-        <li><a href="#">Trash & Recycling</a></li>
-        <li><a href="#">Utilities</a></li>
-        <li><a href="#">Schools</a></li>
-        <li><a href="#">Public Health</a></li>
-        <li><a href="#">Transportation</a></li>
+        <li><a href="#">Housing Assistance</a></li>
+        <li><a href="#">Public Health Services</a></li>
+        <li><a href="#">Voting Information</a></li>
+        <li><a href="#">Education Resources</a></li>
+        <li><a href="#">Trash and Recycling </a></li>
         <li><a href="#">Animal Services</a></li>
         <li><a href="#">Emergency Services</a></li>
-        <li><a href="#">Voting Information</a></li>
+        <li><a href="#">Property Tax Resources</a></li>
+        <li><a href="#">Transportation Services</a></li>
+
       </ul>
     </aside>
 
